Fix font sizing on mobile

--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -152,3 +152,19 @@ section.fic-page[data-font="legible"] span.endnote {
   font-size: 1.05rem;
   letter-spacing: normal;
 }
+
+@media screen and (max-width: 811px) {
+  section.fic-page h1 {
+    margin-top: 2em;
+  }
+
+  section.fic-page[data-font="sans"] p,
+  section.fic-page[data-font="sans"] ol li {
+    font-size: 1.15em;
+  }
+
+  section.fic-page[data-font="serif"] p,
+  section.fic-page[data-font="serif"] ol li {
+    font-size: 1.2rem;
+  }
+}
